--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer>
     <div class="container">
         <ul>
-            <li><a href="mailto:prbaron22@gmail.com"><i class="icon-enveloppe"></i></a></li>
+            <li><a href="mailto:prbaron22@gmail.com"><i class="icon-mail-alt"></i></a></li>
+            <li><a href="skype:prbaron"><i class="icon-skype"></i></a></li>
             <li><a href="https://twitter.com/prbaron"><i class="icon-twitter"></i></a></li>
             <li><a href="https://github.com/prbaron"><i class="icon-github"></i></a></li>
         </ul>
