--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,63 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
+@font-face {
+  font-family: 'fontello';
+  src: url("../../font/fontello.eot?74515863");
+  src: url("../../font/fontello.eot?74515863#iefix") format("embedded-opentype"), url("../../font/fontello.woff?74515863") format("woff"), url("../../font/fontello.ttf?74515863") format("truetype"), url("../../font/fontello.svg?74515863#fontello") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('../../font/fontello.svg?74515863#fontello') format('svg');
+  }
+}
+*/
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */ }
+
+.icon-mail-alt:before {
+  content: '\e804'; }
+
+/* '' */
+.icon-github:before {
+  content: '\e800'; }
+
+/* '' */
+.icon-twitter:before {
+  content: '\e801'; }
+
+/* '' */
+.icon-skype:before {
+  content: '\e802'; }
+
+/* '' */
 body {
   background: #fcfcfc;
   color: #9b9292;
@@ -84,4 +141,57 @@ footer {
   background: #f3f2f2;
   border-top: 1px solid #dad7d7;
   color: #bab5b5;
+  height: 120px;
+  line-height: 120px;
   margin-top: 60px; }
+  footer ul {
+    float: left;
+    padding-left: 0; }
+    footer ul li {
+      float: left;
+      list-style: none;
+      margin-right: 1em; }
+  footer p {
+    float: right; }
+  footer a {
+    -webkit-transition: background 0.2s ease-in-out;
+    -moz-transition: background 0.2s ease-in-out;
+    transition: background 0.2s ease-in-out;
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 25em;
+    color: #bab5b5;
+    padding: 0.5em;
+    position: relative; }
+    footer a:hover {
+      background: #bab5b5;
+      color: #fff; }
+    footer a:after {
+      pointer-events: none;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      content: '';
+      -webkit-box-sizing: content-box;
+      -moz-box-sizing: content-box;
+      box-sizing: content-box;
+      top: -3px;
+      left: -3px;
+      padding: 3px;
+      box-shadow: 0 0 0 4px #bab5b5;
+      -webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
+      -moz-transition: -moz-transform 0.2s, opacity 0.2s;
+      transition: transform 0.2s, opacity 0.2s;
+      -webkit-transform: scale(0.8);
+      -moz-transform: scale(0.8);
+      -ms-transform: scale(0.8);
+      -o-transform: scale(0.8);
+      transform: scale(0.8);
+      opacity: 0; }
+    footer a:hover:after {
+      -webkit-transform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+      transform: scale(1);
+      opacity: 1; }
