--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,17 +17,22 @@
 </head>
 <body>
     <div class="container">
+        {% include menu.html %}
+    </div>
+    <div class="container-full">
+        <div class="container">
+            <h1 class="title">{{ page.header }}</h1>
+        </div> 
+    </div>
+    <div class="container">
         <div class="grid">
 
-            {% include menu.html %}
-
-            <h1>{{ page.header }}</h1>
-
-            <article>
+            <section>
                     {{ content }}
-            </article>    
+            </section>    
         </div>
     </div>
+    
     {% include footer.html %}
     
     {% include analytics.html %}
