mise a jour du header et de la pagination

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="container">
-        {% include menu.html %}
+        {% include header.html %}
     </div>
     <div class="container-full">
         <div class="container">
@@ -36,5 +36,10 @@
     {% include footer.html %}
     
     {% include analytics.html %}
+    
+    <script src="/js/jquery-2.0.3.min.js"></script>
+    <script src="/js/jquery.isotope.min.js"></script>    
+    <script src="/js/app.js"></script>
+    
 </body>
 </html>
