--- a/css/style.css
+++ b/css/style.css
@@ -62,17 +62,24 @@
 
 /* '' */
 body {
-  background: #fcfcfc;
+  background: #fefefe;
   color: #9b9292;
-  font-family: 'PT Sans', sans-serif;
+  font-family: Lato, 'PT Sans', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5em;
   margin: 0;
   padding: 0; }
 
+a {
+  color: #00a6d4;
+  text-decoration: none; }
+  a:hover, a:active {
+    border-bottom: 1px solid #00a6d4; }
+
 h1,
 section,
+header,
 footer {
   *zoom: 1;
   display: table;
@@ -81,12 +88,15 @@ footer {
   h1:before, h1:after,
   section:before,
   section:after,
+  header:before,
+  header:after,
   footer:before,
   footer:after {
     content: " ";
     display: table; }
   h1:after,
   section:after,
+  header:after,
   footer:after {
     clear: both; }
 
@@ -123,7 +133,7 @@ footer {
     width: 100%;
     padding-right: 0; }
 
-.logo {
+header .logo {
   background: url(/img/logo.png) center left no-repeat;
   color: #232d31;
   display: block;
@@ -132,81 +142,35 @@ footer {
   font-family: Lato, sans-serif;
   height: 64px;
   line-height: 64px;
-  margin: 40px 0;
-  padding-left: 74px; }
-
-nav {
-  float: right; }
-  nav ul {
-    height: 64px;
-    line-height: 64px;
-    margin-top: 40px; }
-  nav li {
+  margin: 20px 0;
+  padding-left: 74px;
+  -webkit-transition: background-image 0.3s ease-in-out;
+  -moz-transition: background-image 0.3s ease-in-out;
+  transition: background-image 0.3s ease-in-out; }
+  header .logo:hover {
+    background-image: url(/img/logo2.png);
+    border-bottom: none; }
+header .socials {
+  float: right;
+  margin-top: 34px; }
+  header .socials li {
     float: left;
     list-style: none;
-    margin-right: 10px; }
-    nav li a {
-      color: #737373;
-      font-family: Lato, sans-serif;
-      padding: 10px;
-      text-decoration: none; }
-      nav li a:hover, nav li a:active {
-        background: #00a6d4;
-        color: #fff; }
-
-h1, h2, h3, h4 h5, h6 {
-  font-weight: 400; }
-
-h1 {
-  font-family: "Mir Medium", Lato, sans-serif;
-  font-size: 2.5em;
-  line-height: 60px; }
-
-h2 {
-  font-family: Kreon, sans-serif;
-  font-size: 1.5em;
-  color: #423d3d;
-  padding-bottom: 8px;
-  margin: 16px 0;
-  border-bottom: 1px solid #dad7d7; }
-
-h3 {
-  color: #554e4e;
-  font-family: 'Lato', sans-serif;
-  font-size: 1.25em;
-  margin: 16px 0 20px 0; }
-
-h4 {
-  font-size: 1.125em; }
-
-footer {
-  background: #31302e;
-  color: #e8e8e8;
-  height: 120px;
-  line-height: 120px;
-  margin-top: 60px; }
-  footer ul {
-    float: left;
-    padding-left: 0; }
-    footer ul li {
-      float: left;
-      list-style: none;
-      margin-right: 1em; }
-  footer p {
-    float: right; }
-  footer a {
+    margin-right: 1em; }
+  header .socials a {
     -webkit-transition: background 0.2s ease-in-out;
     -moz-transition: background 0.2s ease-in-out;
     transition: background 0.2s ease-in-out;
-    background: rgba(0, 0, 0, 0.1);
+    background: #d9d9d9;
     border-radius: 25em;
-    color: #e8e8e8;
+    color: #fefefe;
+    display: block;
     padding: 0.5em;
     position: relative; }
-    footer a:hover {
-      background: #bab5b5;
-      color: #31302e; }
-    footer a:after {
+    header .socials a:hover {
+      background: #232d31;
+      border-bottom: none; }
+    header .socials a:after {
       pointer-events: none;
       position: absolute;
       width: 100%;
@@ -219,20 +183,129 @@ footer {
       top: -3px;
       left: -3px;
       padding: 3px;
-      box-shadow: 0 0 0 4px #bab5b5;
-      -webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
-      -moz-transition: -moz-transform 0.2s, opacity 0.2s;
-      transition: transform 0.2s, opacity 0.2s;
+      box-shadow: 0 0 0 4px #232d31;
+      -webkit-transition: opacity 0.2s, background 0.2s;
+      -moz-transition: opacity 0.2s, background 0.2s;
+      transition: opacity 0.2s, background 0.2s;
       -webkit-transform: scale(0.8);
       -moz-transform: scale(0.8);
       -ms-transform: scale(0.8);
       -o-transform: scale(0.8);
       transform: scale(0.8);
       opacity: 0; }
-    footer a:hover:after {
+    header .socials a:hover:after {
       -webkit-transform: scale(1);
       -moz-transform: scale(1);
       -ms-transform: scale(1);
       -o-transform: scale(1);
       transform: scale(1);
       opacity: 1; }
+header nav {
+  *zoom: 1;
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+  border-top: 1px solid #e1e1e1;
+  margin: 20px 0 30px; }
+  header nav:before, header nav:after {
+    content: " ";
+    display: table; }
+  header nav:after {
+    clear: both; }
+  header nav ul {
+    padding-left: 0; }
+  header nav li {
+    float: left;
+    list-style: none;
+    margin-right: 10px; }
+    header nav li a {
+      color: #767676;
+      font-family: Lato, sans-serif;
+      padding: 10px;
+      text-decoration: none; }
+      header nav li a:hover, header nav li a:active {
+        background: #00a6d4;
+        color: #fff; }
+
+h1, h2, h3, h4 h5, h6 {
+  font-weight: 400; }
+
+h1 {
+  font-family: "Mir Medium", Lato, sans-serif;
+  font-size: 2.5em;
+  line-height: 60px; }
+
+h2 {
+  border-bottom: 1px solid #dad7d7;
+  color: #554e4e;
+  font-size: 1.5em;
+  padding-bottom: 8px;
+  margin: 32px 0 16px; }
+  h2 a {
+    color: #423d3d; }
+  h2 small {
+    color: #b6afaf;
+    font-family: Lato, sans-serif;
+    font-size: 0.6em;
+    font-weight: normal; }
+
+h3 {
+  font-family: Kreon, sans-serif;
+  font-size: 1.25em;
+  margin: 16px 0 0; }
+
+h4 {
+  font-size: 1.125em; }
+
+.project {
+  *zoom: 1;
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto; }
+  .project:before, .project:after {
+    content: " ";
+    display: table; }
+  .project:after {
+    clear: both; }
+  .project .thumbnail {
+    display: table-cell;
+    padding-right: 2.35765%;
+    width: 34.11922%; }
+    .project .thumbnail:last-child {
+      width: 31.76157%;
+      padding-right: 0; }
+  .project .entry {
+    display: table-cell;
+    padding-right: 2.35765%;
+    width: 68.23843%; }
+    .project .entry:last-child {
+      width: 65.88078%;
+      padding-right: 0; }
+
+footer {
+  border-top: 4px solid #d8d8d8;
+  background: #31302e;
+  color: #e8e8e8;
+  height: 60px;
+  line-height: 60px;
+  margin-top: 60px; }
+  footer p:first-of-type {
+    float: left; }
+  footer p:last-of-type {
+    float: right; }
+    footer p:last-of-type a {
+      color: #e8e8e8; }
+      footer p:last-of-type a:hover {
+        border-bottom-color: #e8e8e8; }
+
+.btn {
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+  background: #efefef;
+  color: #737373;
+  padding: 10px 20px;
+  text-decoration: none; }
+  .btn:hover {
+    border-bottom: none;
+    background: #dadada;
+    color: #423e3e; }
