Mise en page listing projet. Suppression pagination dans blog.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
         <nav>
     	    <ul>
         		<li><a href="/">HOME</a></li>
-        		<li><a href="/projects/">PROJECTS</a></li>
+        		<li><a href="/projects/">PROJETS</a></li>
         		<li><a href="/blog">BLOG</a></li>
         		<li><a href="mailto:prbaron22@gmail.com">CONTACT</a></li>
         	</ul>
