--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,20 +16,16 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <div class="container">
-        {% include header.html %}
-    </div>
-    <div class="container-full">
+    {% include header.html %}
+
+    <div class="tagline">
         <div class="container">
-            <h1 class="title">{{ page.header }}</h1>
+            <h1 class="title">{{ page.tagline }}</h1>
         </div> 
     </div>
     <div class="container">
         <div class="grid">
-
-            <section>
-                    {{ content }}
-            </section>    
+           {{ content }}    
         </div>
     </div>
     
