--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,22 @@
 <header>
     <div class="container">
-        <a class="logo">pierrebaron.fr</a>
-        <ul class="socials">
-            <li><a href="mailto:prbaron22@gmail.com"><i class="icon-mail-alt"></i></a></li>
-            <li><a href="skype:prbaron"><i class="icon-skype"></i></a></li>
-            <li><a href="https://twitter.com/prbaron"><i class="icon-twitter"></i></a></li>
-            <li><a href="https://github.com/prbaron"><i class="icon-github"></i></a></li>
-        </ul>
-        
-        <nav>
-    	    <ul>
-        		<li><a href="/">HOME</a></li>
-        		<li><a href="/projects/">PROJETS</a></li>
-        		<li><a href="/blog">BLOG</a></li>
-        		<li><a href="mailto:prbaron22@gmail.com">CONTACT</a></li>
-        	</ul>
-        </nav>
+        <div class="grid">
+            <a class="logo">pierrebaron.fr</a>
+            <ul class="socials">
+                <li><a href="mailto:prbaron22@gmail.com"><i class="icon-envelope-alt"></i></a></li>
+                <li><a href="skype:prbaron"><i class="icon-skype"></i></a></li>
+                <li><a href="https://twitter.com/prbaron"><i class="icon-twitter"></i></a></li>
+                <li><a href="https://github.com/prbaron"><i class="icon-github"></i></a></li>
+            </ul>
+            
+            <nav>
+        	    <ul>
+            		<li><a href="/">HOME</a></li>
+            		<li><a href="/projects/">PROJETS</a></li>
+            		<li><a href="/blog">BLOG</a></li>
+            		<li><a href="mailto:prbaron22@gmail.com">CONTACT</a></li>
+            	</ul>
+            </nav>
+        </div>
     </div>
 </header>
