--- a/sass/_prettify.scss
+++ b/sass/_prettify.scss
@@ -8,28 +8,34 @@
 .pln { color: #48484c; }
 
 .prettyprint {
-  font-size: 0.9em;
-  padding: 8px;
-  background-color: #f7f7f9;
-  border: 1px solid #e1e1e8;
+    background-color: #f7f7f9;
+    border: 1px solid #e1e1e8;
+    -webkit-border-radius: 2px;
+       -moz-border-radius: 2px;
+            border-radius: 2px;
+    font-size: 0.9em;
+    padding: 8px;
   
-  ol {
-      padding-left: 0;
-  }
-}
-.prettyprint.linenums {
-  -webkit-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
-     -moz-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
-          box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+    ol {
+        padding-left: 0;
+    }
+
+    &.linenums {
+      -webkit-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+         -moz-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+              box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+    }
 }
 
 /* Specify class=linenums on a pre to get line numbering */
 ol.linenums {
-  margin: 0 0 0 33px; /* IE indents via margin-left */
+    margin: 0 0 0 33px; /* IE indents via margin-left */
+    padding-left: 0;
+    
+    li {
+        padding-left: 12px;
+        color: #bebec5;
+        line-height: 18px;
+        text-shadow: 0 1px 0 #fff;
+    }
 } 
-ol.linenums li {
-  padding-left: 12px;
-  color: #bebec5;
-  line-height: 18px;
-  text-shadow: 0 1px 0 #fff;
-}
