--- a/css/style.css
+++ b/css/style.css
@@ -135,34 +135,34 @@ a [class^="icon-"], a [class*=" icon-"] {
 .icon-white, .nav-pills > .active > a > [class^="icon-"], .nav-pills > .active > a > [class*=" icon-"], .nav-list > .active > a > [class^="icon-"], .nav-list > .active > a > [class*=" icon-"], .navbar-inverse .nav > .active > a > [class^="icon-"], .navbar-inverse .nav > .active > a > [class*=" icon-"], .dropdown-menu > li > a:hover > [class^="icon-"], .dropdown-menu > li > a:hover > [class*=" icon-"], .dropdown-menu > .active > a > [class^="icon-"], .dropdown-menu > .active > a > [class*=" icon-"], .dropdown-submenu:hover > a > [class^="icon-"], .dropdown-submenu:hover > a > [class*=" icon-"] {
   background-image: none; }
 
-.btn [class^="icon-"].icon-large, .nav [class^="icon-"].icon-large, .btn [class*=" icon-"].icon-large, .nav [class*=" icon-"].icon-large {
+.btn [class^="icon-"].icon-large, .pagination .prev a [class^="icon-"].icon-large, .pagination .next a [class^="icon-"].icon-large, .nav [class^="icon-"].icon-large, .btn [class*=" icon-"].icon-large, .pagination .prev a [class*=" icon-"].icon-large, .pagination .next a [class*=" icon-"].icon-large, .nav [class*=" icon-"].icon-large {
   line-height: .9em; }
 
-.btn [class^="icon-"].icon-spin, .nav [class^="icon-"].icon-spin, .btn [class*=" icon-"].icon-spin, .nav [class*=" icon-"].icon-spin {
+.btn [class^="icon-"].icon-spin, .pagination .prev a [class^="icon-"].icon-spin, .pagination .next a [class^="icon-"].icon-spin, .nav [class^="icon-"].icon-spin, .btn [class*=" icon-"].icon-spin, .pagination .prev a [class*=" icon-"].icon-spin, .pagination .next a [class*=" icon-"].icon-spin, .nav [class*=" icon-"].icon-spin {
   display: inline-block; }
 
 .nav-tabs [class^="icon-"], .nav-pills [class^="icon-"], .nav-tabs [class*=" icon-"], .nav-pills [class*=" icon-"], .nav-tabs [class^="icon-"].icon-large, .nav-pills [class^="icon-"].icon-large, .nav-tabs [class*=" icon-"].icon-large, .nav-pills [class*=" icon-"].icon-large {
   line-height: .9em; }
 
-.btn [class^="icon-"].pull-left.icon-2x, .btn [class*=" icon-"].pull-left.icon-2x, .btn [class^="icon-"].pull-right.icon-2x, .btn [class*=" icon-"].pull-right.icon-2x {
+.btn [class^="icon-"].pull-left.icon-2x, .pagination .prev a [class^="icon-"].pull-left.icon-2x, .pagination .next a [class^="icon-"].pull-left.icon-2x, .btn [class*=" icon-"].pull-left.icon-2x, .pagination .prev a [class*=" icon-"].pull-left.icon-2x, .pagination .next a [class*=" icon-"].pull-left.icon-2x, .btn [class^="icon-"].pull-right.icon-2x, .pagination .prev a [class^="icon-"].pull-right.icon-2x, .pagination .next a [class^="icon-"].pull-right.icon-2x, .btn [class*=" icon-"].pull-right.icon-2x, .pagination .prev a [class*=" icon-"].pull-right.icon-2x, .pagination .next a [class*=" icon-"].pull-right.icon-2x {
   margin-top: .18em; }
 
-.btn [class^="icon-"].icon-spin.icon-large, .btn [class*=" icon-"].icon-spin.icon-large {
+.btn [class^="icon-"].icon-spin.icon-large, .pagination .prev a [class^="icon-"].icon-spin.icon-large, .pagination .next a [class^="icon-"].icon-spin.icon-large, .btn [class*=" icon-"].icon-spin.icon-large, .pagination .prev a [class*=" icon-"].icon-spin.icon-large, .pagination .next a [class*=" icon-"].icon-spin.icon-large {
   line-height: .8em; }
 
-.btn.btn-small [class^="icon-"].pull-left.icon-2x, .btn.btn-small [class*=" icon-"].pull-left.icon-2x, .btn.btn-small [class^="icon-"].pull-right.icon-2x, .btn.btn-small [class*=" icon-"].pull-right.icon-2x {
+.btn.btn-small [class^="icon-"].pull-left.icon-2x, .pagination .prev a.btn-small [class^="icon-"].pull-left.icon-2x, .pagination .next a.btn-small [class^="icon-"].pull-left.icon-2x, .btn.btn-small [class*=" icon-"].pull-left.icon-2x, .pagination .prev a.btn-small [class*=" icon-"].pull-left.icon-2x, .pagination .next a.btn-small [class*=" icon-"].pull-left.icon-2x, .btn.btn-small [class^="icon-"].pull-right.icon-2x, .pagination .prev a.btn-small [class^="icon-"].pull-right.icon-2x, .pagination .next a.btn-small [class^="icon-"].pull-right.icon-2x, .btn.btn-small [class*=" icon-"].pull-right.icon-2x, .pagination .prev a.btn-small [class*=" icon-"].pull-right.icon-2x, .pagination .next a.btn-small [class*=" icon-"].pull-right.icon-2x {
   margin-top: .25em; }
 
-.btn.btn-large [class^="icon-"], .btn.btn-large [class*=" icon-"] {
+.btn.btn-large [class^="icon-"], .pagination .prev a.btn-large [class^="icon-"], .pagination .next a.btn-large [class^="icon-"], .btn.btn-large [class*=" icon-"], .pagination .prev a.btn-large [class*=" icon-"], .pagination .next a.btn-large [class*=" icon-"] {
   margin-top: 0; }
 
-.btn.btn-large [class^="icon-"].pull-left.icon-2x, .btn.btn-large [class*=" icon-"].pull-left.icon-2x, .btn.btn-large [class^="icon-"].pull-right.icon-2x, .btn.btn-large [class*=" icon-"].pull-right.icon-2x {
+.btn.btn-large [class^="icon-"].pull-left.icon-2x, .pagination .prev a.btn-large [class^="icon-"].pull-left.icon-2x, .pagination .next a.btn-large [class^="icon-"].pull-left.icon-2x, .btn.btn-large [class*=" icon-"].pull-left.icon-2x, .pagination .prev a.btn-large [class*=" icon-"].pull-left.icon-2x, .pagination .next a.btn-large [class*=" icon-"].pull-left.icon-2x, .btn.btn-large [class^="icon-"].pull-right.icon-2x, .pagination .prev a.btn-large [class^="icon-"].pull-right.icon-2x, .pagination .next a.btn-large [class^="icon-"].pull-right.icon-2x, .btn.btn-large [class*=" icon-"].pull-right.icon-2x, .pagination .prev a.btn-large [class*=" icon-"].pull-right.icon-2x, .pagination .next a.btn-large [class*=" icon-"].pull-right.icon-2x {
   margin-top: .05em; }
 
-.btn.btn-large [class^="icon-"].pull-left.icon-2x, .btn.btn-large [class*=" icon-"].pull-left.icon-2x {
+.btn.btn-large [class^="icon-"].pull-left.icon-2x, .pagination .prev a.btn-large [class^="icon-"].pull-left.icon-2x, .pagination .next a.btn-large [class^="icon-"].pull-left.icon-2x, .btn.btn-large [class*=" icon-"].pull-left.icon-2x, .pagination .prev a.btn-large [class*=" icon-"].pull-left.icon-2x, .pagination .next a.btn-large [class*=" icon-"].pull-left.icon-2x {
   margin-right: .2em; }
 
-.btn.btn-large [class^="icon-"].pull-right.icon-2x, .btn.btn-large [class*=" icon-"].pull-right.icon-2x {
+.btn.btn-large [class^="icon-"].pull-right.icon-2x, .pagination .prev a.btn-large [class^="icon-"].pull-right.icon-2x, .pagination .next a.btn-large [class^="icon-"].pull-right.icon-2x, .btn.btn-large [class*=" icon-"].pull-right.icon-2x, .pagination .prev a.btn-large [class*=" icon-"].pull-right.icon-2x, .pagination .next a.btn-large [class*=" icon-"].pull-right.icon-2x {
   margin-left: .2em; }
 
 .nav-list [class^="icon-"], .nav-list [class*=" icon-"] {
@@ -1360,295 +1360,6 @@ a .icon-rotate-90:before, a .icon-rotate-180:before, a .icon-rotate-270:before, 
 .icon-renren:before {
   content: "\f18b"; }
 
-pre {
-  background: #f8f8ff;
-  border: 1px solid #dedede;
-  font-family: Consolas, monospace, sans-serif;
-  font-size: 13px;
-  font-weight: normal;
-  line-height: 20px; }
-
-.lineno {
-  background-color: #ececec;
-  border-right: 1px solid #ddd;
-  color: #aaa;
-  padding: 0.5em;
-  text-align: right; }
-
-.lineno:first-of-type {
-  padding-top: 0.15em; }
-
-.lineno:last-of-type {
-  padding-bottom: 0em; }
-
-.hll {
-  background-color: #ffffcc; }
-
-.c {
-  color: #999988;
-  font-style: italic; }
-
-/* Comment */
-.err {
-  color: #a61717;
-  background-color: #e3d2d2; }
-
-/* Error */
-.k {
-  color: #000000;
-  font-weight: bold; }
-
-/* Keyword */
-.o {
-  color: #000000;
-  font-weight: bold; }
-
-/* Operator */
-.cm {
-  color: #999988;
-  font-style: italic; }
-
-/* Comment.Multiline */
-.cp {
-  color: #999999;
-  font-weight: bold;
-  font-style: italic; }
-
-/* Comment.Preproc */
-.c1 {
-  color: #999988;
-  font-style: italic; }
-
-/* Comment.Single */
-.cs {
-  color: #999999;
-  font-weight: bold;
-  font-style: italic; }
-
-/* Comment.Special */
-.gd {
-  color: #000000;
-  background-color: #ffdddd; }
-
-/* Generic.Deleted */
-.ge {
-  color: #000000;
-  font-style: italic; }
-
-/* Generic.Emph */
-.gr {
-  color: #aa0000; }
-
-/* Generic.Error */
-.gh {
-  color: #999999; }
-
-/* Generic.Heading */
-.gi {
-  color: #000000;
-  background-color: #ddffdd; }
-
-/* Generic.Inserted */
-.go {
-  color: #888888; }
-
-/* Generic.Output */
-.gp {
-  color: #555555; }
-
-/* Generic.Prompt */
-.gs {
-  font-weight: bold; }
-
-/* Generic.Strong */
-.gu {
-  color: #aaaaaa; }
-
-/* Generic.Subheading */
-.gt {
-  color: #aa0000; }
-
-/* Generic.Traceback */
-.kc {
-  color: #000000;
-  font-weight: bold; }
-
-/* Keyword.Constant */
-.kd {
-  color: #000000;
-  font-weight: bold; }
-
-/* Keyword.Declaration */
-.kn {
-  color: #000000;
-  font-weight: bold; }
-
-/* Keyword.Namespace */
-.kp {
-  color: #000000;
-  font-weight: bold; }
-
-/* Keyword.Pseudo */
-.kr {
-  color: #000000;
-  font-weight: bold; }
-
-/* Keyword.Reserved */
-.kt {
-  color: #445588;
-  font-weight: bold; }
-
-/* Keyword.Type */
-.m {
-  color: #009999; }
-
-/* Literal.Number */
-.s {
-  color: #d01040; }
-
-/* Literal.String */
-.na {
-  color: teal; }
-
-/* Name.Attribute */
-.nb {
-  color: #0086b3; }
-
-/* Name.Builtin */
-.nc {
-  color: #445588;
-  font-weight: bold; }
-
-/* Name.Class */
-.no {
-  color: teal; }
-
-/* Name.Constant */
-.nd {
-  color: #3c5d5d;
-  font-weight: bold; }
-
-/* Name.Decorator */
-.ni {
-  color: purple; }
-
-/* Name.Entity */
-.ne {
-  color: #990000;
-  font-weight: bold; }
-
-/* Name.Exception */
-.nf {
-  color: #990000;
-  font-weight: bold; }
-
-/* Name.Function */
-.nl {
-  color: #990000;
-  font-weight: bold; }
-
-/* Name.Label */
-.nn {
-  color: #555555; }
-
-/* Name.Namespace */
-.nt {
-  color: navy; }
-
-/* Name.Tag */
-.nv {
-  color: teal; }
-
-/* Name.Variable */
-.ow {
-  color: #000000;
-  font-weight: bold; }
-
-/* Operator.Word */
-.w {
-  color: #bbbbbb; }
-
-/* Text.Whitespace */
-.mf {
-  color: #009999; }
-
-/* Literal.Number.Float */
-.mh {
-  color: #009999; }
-
-/* Literal.Number.Hex */
-.mi {
-  color: #009999; }
-
-/* Literal.Number.Integer */
-.mo {
-  color: #009999; }
-
-/* Literal.Number.Oct */
-.sb {
-  color: #d01040; }
-
-/* Literal.String.Backtick */
-.sc {
-  color: #d01040; }
-
-/* Literal.String.Char */
-.sd {
-  color: #d01040; }
-
-/* Literal.String.Doc */
-.s2 {
-  color: #d01040; }
-
-/* Literal.String.Double */
-.se {
-  color: #d01040; }
-
-/* Literal.String.Escape */
-.sh {
-  color: #d01040; }
-
-/* Literal.String.Heredoc */
-.si {
-  color: #d01040; }
-
-/* Literal.String.Interpol */
-.sx {
-  color: #d01040; }
-
-/* Literal.String.Other */
-.sr {
-  color: #009926; }
-
-/* Literal.String.Regex */
-.s1 {
-  color: #d01040; }
-
-/* Literal.String.Single */
-.ss {
-  color: #990073; }
-
-/* Literal.String.Symbol */
-.bp {
-  color: #999999; }
-
-/* Name.Builtin.Pseudo */
-.vc {
-  color: teal; }
-
-/* Name.Variable.Class */
-.vg {
-  color: teal; }
-
-/* Name.Variable.Global */
-.vi {
-  color: teal; }
-
-/* Name.Variable.Instance */
-.il {
-  color: #009999; }
-
-/* Literal.Number.Integer.Long */
 .com {
   color: #93a1a1; }
 
@@ -1674,26 +1385,27 @@ pre {
   color: #48484c; }
 
 .prettyprint {
+  background-color: #f7f7f9;
+  border: 1px solid #e1e1e8;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
   font-size: 0.9em;
   padding: 8px;
-  background-color: #f7f7f9;
-  border: 1px solid #e1e1e8; }
-
-.prettyprint.linenums {
-  -webkit-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
-  -moz-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
-  box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0; }
-
-/* Specify class=linenums on a pre to get line numbering */
-ol.linenums {
-  margin: 0 0 0 33px;
-  /* IE indents via margin-left */ }
-
-ol.linenums li {
-  padding-left: 12px;
-  color: #bebec5;
-  line-height: 18px;
-  text-shadow: 0 1px 0 #fff; }
+  /* Specify class=linenums on a pre to get line numbering */ }
+  .prettyprint.linenums {
+    -webkit-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+    -moz-box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0;
+    box-shadow: inset 40px 0 0 #fbfbfc, inset 41px 0 0 #ececf0; }
+  .prettyprint ol.linenums {
+    margin: 0 0 0 33px;
+    /* IE indents via margin-left */
+    padding-left: 0px; }
+    .prettyprint ol.linenums li {
+      padding-left: 12px;
+      color: #bebec5;
+      line-height: 18px;
+      text-shadow: 0 1px 0 #fff; }
 
 @font-face {
   font-family: 'Mir-Medium';
@@ -1715,7 +1427,7 @@ ol.linenums li {
 
 body {
   background: #fefefe;
-  color: #9b9292;
+  color: #a49d9d;
   font-family: Lato, 'PT Sans', sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -1881,6 +1593,7 @@ header nav {
       text-decoration: none; }
       header nav li a:hover, header nav li a:active {
         background: #00a6d4;
+        border-bottom: none;
         color: #fff; }
       @media screen and (max-width: 479px) {
         header nav li a {
@@ -1908,22 +1621,28 @@ h1 {
   font-family: "Mir-Medium", Lato, sans-serif;
   font-size: 2.5em;
   line-height: 60px; }
+  h1 small {
+    color: #c9c5c5;
+    font-family: Lato, sans-serif;
+    font-size: 0.4em;
+    font-weight: normal; }
 
 h2 {
-  border-bottom: 1px solid #dad7d7;
-  color: #554e4e;
+  border-bottom: 1px solid #d5d2d2;
+  color: #504949;
   font-size: 1.5em;
   padding-bottom: 8px;
   margin: 32px 0 16px; }
   h2 a {
-    color: #423d3d; }
+    color: #3d3838; }
   h2 small {
-    color: #b6afaf;
+    color: #b1aaaa;
     font-family: Lato, sans-serif;
     font-size: 0.6em;
     font-weight: normal; }
 
 h3 {
+  color: #6a6262;
   font-family: Kreon, Lato, sans-serif;
   font-size: 1.25em;
   margin: 16px 0 0; }
@@ -2000,14 +1719,23 @@ footer {
       footer p:last-of-type a:hover {
         border-bottom-color: #e8e8e8; }
 
-.btn {
+.btn, .pagination .prev a, .pagination .next a {
   border-top-left-radius: 2px;
   border-top-right-radius: 2px;
   background: #efefef;
   color: #737373;
   padding: 10px 20px;
   text-decoration: none; }
-  .btn:hover {
+  .btn:hover, .pagination .prev a:hover, .pagination .next a:hover {
     border-bottom: none;
     background: #dadada;
     color: #423e3e; }
+
+.pagination {
+  list-style-type: none;
+  overflow: hidden;
+  padding-left: 0; }
+  .pagination .prev a {
+    float: left; }
+  .pagination .next a {
+    float: right; }
