--- a/sass/_prettify.scss
+++ b/sass/_prettify.scss
@@ -24,7 +24,7 @@
     /* Specify class=linenums on a pre to get line numbering */
     ol.linenums {
         margin: 0 0 0 33px; /* IE indents via margin-left */
-        padding-left: 0;
+        padding-left: 0px;
         
         li {
             padding-left: 12px;
