--- a/css/style.css
+++ b/css/style.css
@@ -1602,17 +1602,15 @@ header nav {
     margin-right: 0; }
 
 .tagline {
-  background: #00a6d4;
-  color: #fff;
-  padding: 20px 0;
-  margin-bottom: 16px; }
-  .tagline .title {
-    display: table-cell;
-    padding-right: 2.35765%;
-    width: 102.35765%; }
-    .tagline .title:last-child {
-      width: 100%;
-      padding-right: 0; }
+  background-size: cover;
+  background-position: center;
+  height: 400px; }
+  @media screen and (min-width: 481px) and (max-width: 768px) {
+    .tagline {
+      height: 300px; } }
+  @media screen and (max-width: 480px) {
+    .tagline {
+      height: 200px; } }
 
 h1, h2, h3, h4 h5, h6 {
   font-weight: 400; }
@@ -1620,12 +1618,17 @@ h1, h2, h3, h4 h5, h6 {
 h1 {
   font-family: "Mir-Medium", Lato, sans-serif;
   font-size: 2.5em;
-  line-height: 60px; }
+  line-height: 60px;
+  margin: 0.5em 0 0 0; }
   h1 small {
     color: #c9c5c5;
     font-family: Lato, sans-serif;
     font-size: 0.4em;
     font-weight: normal; }
+    @media screen and (max-width: 767px) {
+      h1 small {
+        display: block;
+        line-height: 24px; } }
 
 h2 {
   border-bottom: 1px solid #d5d2d2;
@@ -1653,7 +1656,8 @@ h4 {
 .projects {
   *zoom: 1;
   display: block;
-  padding-left: 0; }
+  padding-left: 0;
+  margin: 0; }
   .projects:before, .projects:after {
     content: " ";
     display: table; }
@@ -1670,6 +1674,8 @@ h4 {
       margin-right: 0; }
     .projects .project:nth-child(3n+1) {
       clear: left; }
+    .projects .project h2 {
+      margin: 16px 0; }
     .projects .project img {
       width: 100%; }
     @media screen and (max-width: 480px) {
@@ -1739,16 +1745,15 @@ footer {
 .btn, .pagination .prev a, .pagination .next a {
   border-top-left-radius: 2px;
   border-top-right-radius: 2px;
-  background: #efefef;
-  color: #737373;
+  background: #00a6d4;
+  color: #fff;
   padding: 10px 20px;
   text-decoration: none; }
   .btn:hover, .pagination .prev a:hover, .pagination .next a:hover {
     border-bottom: none;
-    background: #dadada;
-    color: #423e3e; }
+    background: #006a88; }
   .btn:active, .pagination .prev a:active, .pagination .next a:active {
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset; }
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3) inset, 0 0 6px rgba(0, 0, 0, 0.5) inset; }
 
 .pagination {
   list-style-type: none;
@@ -1756,5 +1761,15 @@ footer {
   padding-left: 0; }
   .pagination .prev a {
     float: left; }
+    @media screen and (max-width: 767px) {
+      .pagination .prev a {
+        float: none;
+        display: block; } }
   .pagination .next a {
     float: right; }
+    @media screen and (max-width: 767px) {
+      .pagination .next a {
+        float: none;
+        display: block;
+        margin-bottom: 20px;
+        text-align: right; } }
