--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,6 +34,8 @@
 
 $lightGrey : hsl(0, 4%, 93%);
 
+$blue: #00a6d4;
+
 body {
     background: #fefefe;
     color: darken($lightGrey, 30%);
@@ -46,12 +48,12 @@ body {
 }
 
 a {
-    color: #00a6d4;
+    color: $blue;
     text-decoration: none;
 
     &:hover,
     &:active {
-        border-bottom: 1px solid #00a6d4;
+        border-bottom: 1px solid $blue;
     }
 }
 
@@ -182,7 +184,7 @@ header {
                 text-decoration: none;
 
                 &:hover, &:active {
-                    background: #00a6d4;
+                    background: $blue;
                     border-bottom: none;
                     color: #fff;
                 }
@@ -208,7 +210,7 @@ header {
     }
 
     @include media(max-width 480px) {
-        height: 200px;
+        height: 300px;
     }
 }
 
@@ -347,7 +349,7 @@ footer {
 
 .btn {
     @include border-top-radius(2px);
-    background: #00a6d4;
+    background: $blue;
     color: #fff;
     padding: 10px 20px;
 
@@ -355,7 +357,7 @@ footer {
 
     &:hover {
         border-bottom: none;
-        background: darken(#00a6d4, 15%);
+        background: darken($blue, 15%);
     }
     &:active {
        @include box-shadow(0 0 0 1px rgba(0,0,0,.3) inset,0 0 6px rgba(0,0,0,.5) inset);
