--- a/sass/style.scss
+++ b/sass/style.scss
@@ -205,12 +205,15 @@ header {
     background-position: center;
     height: 400px;
     
+    @include transition(height 0.3s ease-in-out);
+
+    
     @include media(min-width 481px max-width 768px) {
         height: 300px;
     }
 
     @include media(max-width 480px) {
-        height: 300px;
+        height: 200px;
     }
 }
 
