mise à jour de la date. creation des pages projets (WIP)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <div class="grid">
-            <h1 class="title">{{ page.tagline }} <small>{{ page.date | date_to_long_string}}</small></h1>
+            <h1 class="title">{{ page.tagline }} <small>{{ page.date | date: '%d/%m/%Y'}}</small></h1>
             
             {{ content }}
             
