--- a/sass/style.scss
+++ b/sass/style.scss
@@ -285,6 +285,10 @@ h4 {
         }
         img {
             @include fill-parent;
+            
+            @include media(max-width 480px) {
+                display: none;
+            }
         }
 
         @include media(max-width 480px) {
@@ -363,7 +367,7 @@ footer {
         background: darken($blue, 15%);
     }
     &:active {
-       @include box-shadow(0 0 0 1px rgba(0,0,0,.3) inset,0 0 6px rgba(0,0,0,.5) inset);
+       @include box-shadow(0 0 0 1px rgba(0,0,0,.5) inset,0 0 6px rgba(0,0,0,.8) inset);
     }
     
 }
