--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -21,6 +21,12 @@
     <div class="container">
         <div class="grid">
             <h1 class="title">{{ page.tagline }} <small>{{ page.date | date: '%d/%m/%Y'}}</small></h1>
+
+            <ul class="unstyled">
+                <li><i class="icon-building"></i> {{ page.client }}</li>
+                <li><i class="icon-time"></i> {{ page.duration }}</li>
+                <li><i class="icon-bolt"></i> {{ page.skills }}</li>
+            </ul>
             
             {{ content }}
             
