--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,9 +11,14 @@
             
             <nav>
         	    <ul>
-            		<li><a href="/">HOME</a></li>
-            		<li><a href="/works/">PROJETS</a></li>
-            		<li><a href="/blog">BLOG</a></li>
+        	    {% for link in site.navigation %}
+                    {% assign current = nil %}
+                    {% assign currentPage = page.url | remove: 'index.html' %}
+                        {% if currentPage == link.url or page.layout == link.layout %}
+                            {% assign current = 'active' %}
+                        {% endif %}
+                        <li class="{{current}}"><a href="{{ link.url }}">{{ link.text }}</a></li>
+                    {% endfor %}
             		<li><a href="mailto:prbaron22@gmail.com">CONTACT</a></li>
             	</ul>
             </nav>
