--- a/sass/style.scss
+++ b/sass/style.scss
@@ -180,17 +180,27 @@ header {
             a {
                 color: #767676;
                 font-family: Lato, sans-serif;
-                padding: 10px;
+                padding: 17px 10px 19px 10px;
                 text-decoration: none;
 
                 &:hover, &:active {
                     background: $blue;
+                    border-top: 3px solid darken($blue, 20%);
                     border-bottom: none;
                     color: #fff;
                 }
 
                 @include media(max-width 479px) {
                     font-size: 0.8em;
+                    padding: 20px 10px 21px 10px;
+                }
+            }
+            
+            &.active a { 
+                color: $blue;
+                
+                &:hover {
+                    color: darken($blue, 20%);
                 }
             }
         }
